k8s/frontend-v1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v1-service
spec:
  selector:
    app: frontend
    version: v1
  ports:
    - port: 80
      targetPort: 80
