k8s/frontend-v2-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-v2-service
spec:
  selector:
    app: frontend
    version: v2
  ports:
    - port: 80
      targetPort: 80
